<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:padding="8dp"
    tools:context=".AfterLogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_string"
                android:textAlignment="center" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sending_history_string"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiving_history_string"
                android:textAllCaps="false" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/receiver_s_username_string"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sendSticker"
                    android:text="@string/send_string"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reset"
                    android:text="@string/reset_string"
                    android:textAllCaps="false" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stickers_string"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/click_emoji" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/emoji1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textAlignment="center"
                android:src="@drawable/emoji1" />

            <CheckBox
                android:id="@+id/emoji1checkBox"
                android:onClick="selectSticker"
                android:layout_width="33dp"
                android:layout_height="35dp" />

            <ImageView
                android:id="@+id/emoji2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textAlignment="center"
                android:src="@drawable/emoji2" />

            <CheckBox
                android:id="@+id/emoji2checkBox"
                android:onClick="selectSticker"
                android:layout_width="33dp"
                android:layout_height="35dp" />

            <ImageView
                android:id="@+id/emoji3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textAlignment="center"
                android:src="@drawable/emoji3" />

            <CheckBox
                android:id="@+id/emoji3checkBox"
                android:onClick="selectSticker"
                android:layout_width="33dp"
                android:layout_height="35dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>